# Checkers

./: .gitignore  CMakeLists.txt  Checkers.c  Checkers.h  Game.c  Game.h  main.c
